src/objects/EGandLMFSpend__c.object
<CustomObject>
    <description>Individual EG and LMF Budget and Spend tied to a EG / LMF Territory Budget.</description>
    <fields>
        <fullName>ActualSpend__c</fullName>
        <label>Actual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Budget__c - ActualSpend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Budget - Actual Spend.</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BrandQuality__c</fullName>
        <inlineHelpText>Free text field.</inlineHelpText>
        <label>Brand Quality</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Tags__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Brand</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>EG and LMF Spend</relationshipLabel>
        <relationshipName>EG_and_LMF_Spend</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BudgetType__c</fullName>
        <inlineHelpText>Type of budget.</inlineHelpText>
        <label>Budget Type</label>
        <picklist>
            <picklistValues>
                <fullName>Events / Sponsorships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Materials / POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Margin Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menu Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc (undefined)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Incentives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Samples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sampling / Tasting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKI Goals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <formula>ParentEGorLMF__r.Distributor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentEGorLMF__c</fullName>
        <label>Master EG or LMF</label>
        <referenceTo>EG_and_LMF__c</referenceTo>
        <relationshipLabel>EG and LMF Spend</relationshipLabel>
        <relationshipName>EG_and_LMF_Spend</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <formula>ParentEGorLMF__r.Territory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>text(ParentEGorLMF__r.Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>EG and LMF Spend</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ParentEGorLMF__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Brand__c</columns>
        <columns>BrandQuality__c</columns>
        <columns>Budget__c</columns>
        <columns>ActualSpend__c</columns>
        <columns>Balance__c</columns>
        <columns>BudgetType__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EG and LMF Spend</pluralLabel>
    <recordTypes>
        <fullName>EG_DASpend</fullName>
        <active>true</active>
        <description>EG / DA Spend.</description>
        <label>EG / DA Spend</label>
    </recordTypes>
    <recordTypes>
        <fullName>LMFSpend</fullName>
        <active>true</active>
        <description>LMF Spend.</description>
        <label>LMF Spend</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>